# coderag

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NEXT_STEPS.md  README.md  RELEASE.md  RUST_SDK_DESIGN.md  Taskfile.yml
.claude/: settings.local.json
.github/workflows/: build-test.yml  release.yml
archive/: README.md
archive/debugging-sessions/: MCP_ACCESS_PATTERN.md  MCP_STDIO_TESTING_LOG.md  NEXT_RESTART_CHECKLIST.md  RESTART_PROMPT.md  STDOUT_BUFFERING_FIX.md  TEST_MCP_ACCESS.md  TROUBLESHOOTING_PLAN.md
memory-bank/: activeContext.md  mcp-server-patterns.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md  troubleshooting.md
scripts/: README.md  test-mcp-server.sh  test_manual_mcp.py  test_sdk_server.sh  test_server_local.sh
src/: embedding.rs  embedding_basic.rs  embedding_multi.rs  embedding_simple.rs  enhanced_vectordb.rs  lib.rs  main.rs  project_manager.rs
src/crawler/: chunker.rs  engine.rs  extractor.rs  mod.rs  types.rs
src/mcp/: mod.rs  protocol.rs  sdk_server.rs  server.rs  tools.rs
src/vectordb/: chunking.rs  hybrid_search.rs  indexing.rs  mod.rs  quantization.rs  search.rs  storage.rs  types.rs
test-utils/: Cargo.toml  README.md  final-comparison.py  mcp-comparison-tester.py  mcp-wrapper.sh  simple-comparison.py  stdio-analysis-summary.md  stdio-logger.py  test-stdout-fix.md  test_byte_level.sh  test_claude_simulation.py  test_continuous_clean.sh  test_continuous_interaction.sh  test_empty_lines.sh  test_exact_bytes.py  test_fixed_server.py  test_line_endings  test_line_endings.rs  test_response_bytes.py  test_response_format.sh  test_unknown_methods.py  test_with_stdbuf.sh  typescript-rust-stdio-comparison.md
test-utils/scripts/: test_logging.sh  test_mcp.sh  test_mcp_complete.sh  test_mcp_debug.sh  test_tools.sh
test-utils/src/: mcp_protocol_logger.rs  mcp_test_client.rs
tests/: crawler_integration.rs  mcp_integration.rs  vector_db_enhanced_tests.rs
