[package]
name = "coderag"
version = "0.1.0"
edition = "2021"
description = "Documentation RAG for AI-Assisted Development"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourname/coderag"
keywords = ["documentation", "rag", "ai", "mcp", "embeddings"]
categories = ["development-tools", "web-programming"]

[dependencies]
# Embedding implementations - try both approaches
fastembed = "4.8.0"           # ONNX-based embeddings (primary)

# Core Candle dependencies (for custom implementations if needed)
candle-core = "0.9.1"
candle-transformers = "0.9.1"
candle-nn = "0.9.1"

# Tokenizers and model loading
tokenizers = "0.20"
hf-hub = "0.3"

# Async and HTTP
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.0"
