[package]
name = "coderag"
version = "0.1.0"
edition = "2021"
description = "Documentation RAG for AI-Assisted Development"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourname/coderag"
keywords = ["documentation", "rag", "ai", "mcp", "embeddings"]
categories = ["development-tools", "web-programming"]

[[bin]]
name = "coderag-mcp"
path = "src/bin/mcp-server.rs"

[dependencies]

# Error handling
anyhow = "1.0"

# Core Candle dependencies (for custom implementations if needed)
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
# robotparser = "0.3"         # Conflicts with openssl - TODO: find alternative
chrono = "0.4"                # Date/time for metadata

# CLI parsing (for MCP server binary)
clap = { version = "4.5", features = ["derive"] }
# Embedding implementations - try both approaches
fastembed = "4.8.0"           # ONNX-based embeddings (primary)
governor = "0.6"              # Rate limiting
hf-hub = "0.3"
html2text = "0.12"            # Convert HTML to markdown

# JSON-RPC for MCP protocol
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
regex = "1.11"                # Pattern matching for cleanup
reqwest = { version = "0.12", features = ["json"] }

# Web crawling dependencies
scraper = "0.20"              # HTML parsing and CSS selectors

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# Tokenizers and model loading
tokenizers = "0.20"

# Async and HTTP
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"                   # URL parsing and manipulation

# For generating UUIDs
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.0"
