[package]
name = "coderag-test-utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-test-client"
path = "src/mcp_test_client.rs"

[[bin]]
name = "mcp-protocol-logger"
path = "src/mcp_protocol_logger.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
